Fixed text overlap in job title on mobile, implemented more aesthetic tweaks

--- a/web/themes/custom/cj_material/sass/_variables.scss
+++ b/web/themes/custom/cj_material/sass/_variables.scss
@@ -38,6 +38,10 @@ $cj-orange: (
 $color-primary-base: $cj-orange;
 $color-accent-base: $cj-blue;
 
+$color-primary: #2A556B !default; //500
+$color-primary-hover: #FF9049 !default;
+$color-primary-active: #2A556B !default;
+
 $color-accent: #FF904B;
 
 $font-family: 'Lato';
