--- a/web/themes/custom/cj_material/sass/styles.scss
+++ b/web/themes/custom/cj_material/sass/styles.scss
@@ -22,9 +22,22 @@ h1, .h1 {
   text-transform: uppercase;
   margin-top: 0;
   padding-bottom: 10px;
-  font-size: 40px;
-  padding-bottom: 34px;
+  font-size: 28px;
+  line-height: 1em;
+  padding-bottom: 30px;
   position: relative;
+}
+
+@media (min-width: $xs) {
+  h1, .h1 {
+    font-size: 40px;
+  }
+}
+
+@media (max-width: $xs) {
+  h2, .h2 {
+    font-size: 18px;
+  }
 }
 
 strong {
@@ -36,6 +49,11 @@ strong {
 
 p, h4 {
   padding-right: 18px;
+  padding-left: 18px;
+}
+
+p.address {
+  padding-left: 0;
 }
 
 ul.spaced{
@@ -70,6 +88,7 @@ h2 a, h3 a {
   color: #1E5168;
   text-transform: uppercase;
 }
+
 h4 {
   color: #FF904B;
   font-weight: bold;
@@ -669,7 +688,7 @@ input.button.button-orange:hover,
 }
 
 h2.company-name {
-  margin-top: -0.5em;
+  margin-top: 0em;
   text-align: center;
 }
 
@@ -942,7 +961,7 @@ span.upsell-price .tax {
   text-align: right;
 }
 #actions nav .button.button-action {
-  padding: 10px 16px;
+  padding: 6px 10px;
   min-height: 0;
 }
 
@@ -1104,11 +1123,13 @@ h2.section-header {
   padding-bottom: 0;
 }
 
-@media (min-width: $md) {
+@media (min-width: $ss) {
   .section-wrapper {
+    padding-top: 25px;
     padding-bottom: 75px;
   }
 }
+
 a.job-card:hover, a.job-card:focus,
 a.partner-card:hover, a.partner-card:focus,
 article.card:hover {
@@ -1232,9 +1253,26 @@ h1.hero--title:after {
   }
 }
 
+iframe {
+  padding: 0;
+  width: 100%;
+}
+
+@media (max-width: $ss) {
+  iframe {
+    width: 50%;
+  }
+}
+
 #drawer nav ul.menu {
   display: flex;
   flex-direction: column-reverse;
+}
+
+@media (max-width: $lg) {
+  ul.menu {
+    visibility: hidden;
+  }
 }
 
 .field--name-description-summary .filter-wrapper {
@@ -1686,13 +1724,23 @@ label.option {
   }
 }
 
+.tabs ul li a {
+  background-color: #D7D5D5;
+  border-top-right-radius: 6px;
+  border-top-left-radius: 6px;
+}
+
 .tabs ul li a.is-active, ul.tabs li a.is-active {
-  border-color: #FF904B;
-  color: #FF904B;
+  background-color: #FFFFFF;
+  border-top-right-radius: 6px;
+  border-top-left-radius: 6px;
+  border-color: #FFFFFF;
+  color: #2a556b;
 }
 
 .tabs ul li a:hover, ul.tabs li a:hover {
-  border-color: rgba(255, 144, 75, 0.5)
+  border-color: #FF9049;
+  color: #FF9049;
 }
 
 .form-item-account-type.btn {
@@ -1822,6 +1870,18 @@ div#edit-individual-profile-consent-job-update-wrapper, div#edit-candidate-profi
   }
 }
 
+@media (max-width: $xs) {
+  .company-info-container {
+    padding-top: 20px;
+  }
+}
+
+@media (max-width: $md) {
+  .company-info-container {
+    padding-top: 20px;
+  }
+}
+
 .facets-widget-checkbox ul {
   list-style: none;
   padding-left: 0;
@@ -1847,6 +1907,28 @@ input.facets-checkbox {
 
 li.facet-item {
   line-height: 30px;
+}
+
+.local-tasks-tabs li {
+  background-color: #FFFFFF;
+  max-width: fit-content;
+  border-top-right-radius: 6px;
+  border-top-left-radius: 6px;
+  margin-right: 5px;
+}
+
+.tabs ul li a {
+  padding: 8px 12px;
+}
+
+.region-before-main .local-tasks-tabs {
+  margin: 0 auto;
+  max-width: 1224px;
+}
+
+ul.tabs {
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 form#views-exposed-form-job-board-page {
